--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <title>just2doit</title>
-</head>
-<body>
-<div>{{welcome}}</div>
-<a href="/home?name=游客">
-<img src="/static/img/aa.jpg" alt="">
-</a>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>sell</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"><link rel=stylesheet href=./static/css/reset.css><link href=static/css/app.49655ede023a85439923b5138535b277.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.b12808a7aabab1742fb3.js></script><script type=text/javascript src=static/js/vendor.00895f6aee061d1f6e66.js></script><script type=text/javascript src=static/js/app.14acc0e12785ae79ea08.js></script></body></html>
